Add section about without style

--- a/cv.html
+++ b/cv.html
@@ -41,22 +41,61 @@
                 <h1 class="header__title">Anna Shylkina</h1>
 
                 <div class="header__social social">
-                    <a class="social__link" href="#">
+                    <a class="social__link" href="https://t.me/anya_shy" target="_blank">
                         <img class="social__img" src="images/icon/telegram.svg" alt="telegram">
                     </a>
-                    <a class="social__link" href="#">
+                    <a class="social__link" href="tel:+380992293367">
                         <img class="social__img" src="images/icon/phone.svg" alt="phone">
                     </a>
-                    <a class="social__link" href="#">
+                    <a class="social__link" href="mailto:shylkina.ao@gmail.com">
                         <img class="social__img" src="images/icon/email.svg" alt="gmail">
                     </a>
-                    <a class="social__link" href="#">
-                        <img class="social__img" src="images/icon/viber.svg" alt="viber">
+                    <a class="social__link" href="https://github.com/Anna-Shy" target="_blank">
+                        <img class="social__img" src="images/icon/github.svg" alt="github">
                     </a>
                 </div>
             </div>
         </div>
     </header>
+
+    <section class="about">
+        <div class="container">
+            <h2 class="about__title title">About</h2>
+            <div class="about__inner">
+                <div class="about__desc">
+                    <p class="about__text">
+                        Young and ambition girl, who on the finish line of the second University. I interests by fresh
+                        technologies and constantly striving for new knowledges. During the study worked with front-end
+                        and back-end sides. And don't afraid challenging tasks.
+                    </p>
+                </div>
+
+                <div class="about__info">
+                    <ul class="about__list">
+                        <li class="about__item">
+                            <p class="about__item-title">Email</p>
+                            <p class="about__item-text">shylkina.ao@gmail.com</p>
+                            <!-- <a class="about__item-text" href="mailto:shylkina.ao@gmail.com">shylkina.ao@gmail.com</a> -->
+                        </li>
+                        <li class="about__item">
+                            <p class="about__item-title">Phone</p>
+                            <p class="about__item-text">+38 (099) 229 33 67</p>
+                            <!-- <a class="about__item-text" href="tel:+380992293367">+38 (099) 229 33 67</a> -->
+                        </li>
+                        <li class="about__item">
+                            <p class="about__item-title">Address</p>
+                            <p class="about__item-text">Kyiv</p>
+                        </li>
+                        <li class="about__item">
+                            <p class="about__item-title">Repository</p>
+                            <p class="about__item-text">https://github.com/Anna-Shy</p>
+                            <!-- <a class="about__item-text" href="https://github.com/Anna-Shy">https://github.com/Anna-Shy</a> -->
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/main.js"></script>
 </body>
