Add style to section about

--- a/cv.html
+++ b/cv.html
@@ -60,11 +60,11 @@
 
     <section class="about">
         <div class="container">
-            <h2 class="about__title title">About</h2>
+            <h2 class="title">About</h2>
             <div class="about__inner">
                 <div class="about__desc">
                     <p class="about__text">
-                        Young and ambition girl, who on the finish line of the second University. I interests by fresh
+                        Young and ambition girl, who on the finish line of the second University. <br>I interests by fresh
                         technologies and constantly striving for new knowledges. During the study worked with front-end
                         and back-end sides. And don't afraid challenging tasks.
                     </p>
@@ -74,13 +74,11 @@
                     <ul class="about__list">
                         <li class="about__item">
                             <p class="about__item-title">Email</p>
-                            <p class="about__item-text">shylkina.ao@gmail.com</p>
-                            <!-- <a class="about__item-text" href="mailto:shylkina.ao@gmail.com">shylkina.ao@gmail.com</a> -->
+                            <a class="about__item-text" href="mailto:shylkina.ao@gmail.com">shylkina.ao@gmail.com</a>
                         </li>
                         <li class="about__item">
                             <p class="about__item-title">Phone</p>
-                            <p class="about__item-text">+38 (099) 229 33 67</p>
-                            <!-- <a class="about__item-text" href="tel:+380992293367">+38 (099) 229 33 67</a> -->
+                            <a class="about__item-text" href="tel:+380992293367">+38 (099) 229 33 67</a>
                         </li>
                         <li class="about__item">
                             <p class="about__item-title">Address</p>
@@ -88,8 +86,7 @@
                         </li>
                         <li class="about__item">
                             <p class="about__item-title">Repository</p>
-                            <p class="about__item-text">https://github.com/Anna-Shy</p>
-                            <!-- <a class="about__item-text" href="https://github.com/Anna-Shy">https://github.com/Anna-Shy</a> -->
+                            <a class="about__item-text" href="https://github.com/Anna-Shy" target="_blank">https://github.com/Anna-Shy</a>
                         </li>
                     </ul>
                 </div>
