Add section skill

--- a/cv.html
+++ b/cv.html
@@ -64,7 +64,8 @@
             <div class="about__inner">
                 <div class="about__desc">
                     <p class="about__text">
-                        Young and ambition girl, who on the finish line of the second University. <br>I interests by fresh
+                        Young and ambition girl, who on the finish line of the second University. <br>I interests by
+                        fresh
                         technologies and constantly striving for new knowledges. During the study worked with front-end
                         and back-end sides. And don't afraid challenging tasks.
                     </p>
@@ -86,10 +87,58 @@
                         </li>
                         <li class="about__item">
                             <p class="about__item-title">Repository</p>
-                            <a class="about__item-text" href="https://github.com/Anna-Shy" target="_blank">https://github.com/Anna-Shy</a>
+                            <a class="about__item-text" href="https://github.com/Anna-Shy"
+                                target="_blank">https://github.com/Anna-Shy</a>
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skill">
+        <div class="container">
+            <h2 class="title">Skill</h2>
+            <div class="skill__inner">
+
+                <div class="skill__content">
+                    <h2 class="skill__title">HTML</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-html"></div>
+                    </div>
+
+                    <h2 class="skill__title">CSS</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-css"></div>
+                    </div>
+
+                    <h2 class="skill__title">JS</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-js"></div>
+                    </div>
+
+                    <h2 class="skill__title">BootStrap</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-bootstrap"></div>
+                    </div>
+
+                    <h2 class="skill__title">Java Core, C#</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-java-c"></div>
+                    </div>
+
+                    <h2 class="skill__title">MySQL, SQL querying</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-sql"></div>
+                    </div>
+
+                    <h2 class="skill__title">Git</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-git"></div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
