Add section carousel(certifitation) and footer

--- a/cv.html
+++ b/cv.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
 
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -24,9 +26,6 @@
                             </li>
                             <li class="menu__item">
                                 <a class="menu__link" href="#">Skill</a>
-                            </li>
-                            <li class="menu__item">
-                                <a class="menu__link" href="#">Education</a>
                             </li>
                             <li class="menu__item">
                                 <a class="menu__link" href="#">Certification</a>
@@ -136,6 +135,11 @@
                     <div class="skill__progressbar">
                         <div class="skill__progress progress-git"></div>
                     </div>
+
+                    <h2 class="skill__title">English</h2>
+                    <div class="skill__progressbar">
+                        <div class="skill__progress progress-english"></div>
+                    </div>
                 </div>
 
 
@@ -143,6 +147,70 @@
         </div>
     </section>
 
+    <section class="carousel">
+        <div class="container">
+            <h2 class="title">Certification</h2>
+            <div class="carousel__inner">
+                <div class="carousel__item">
+                    <a class="carousel__img-link" href="images/carousel/carousel-big/codeacad-inter-js-big.jpg">
+                    <img class="carousel__img" src="images/carousel/codeacad-inter-js.jpg" alt="">
+                </a>
+                </div>
+                <div class="carousel__item">
+                    <a class="carousel__img-link" href="images/carousel/carousel-big/codeacadem-js-big.jpg">
+                    <img class="carousel__img" src="images/carousel/codeacadem-js.jpg" alt="">
+                    </a>
+                </div>
+                <div class="carousel__item">
+                    <a class="carousel__img-link" href="images/carousel/carousel-big/js_testprovider-big.jpg">
+                    <img class="carousel__img" src="images/carousel/js_testprovider.jpg" alt="">
+                    </a>
+                </div>
+                <div class="carousel__item">
+                    <a class="carousel__img-link" href="images/carousel/carousel-big/js_testprovider-2-big.jpg">
+                    <img class="carousel__img" src="images/carousel/js_testprovider-2.jpg" alt="">
+                    </a>
+                </div>
+                <div class="carousel__item">
+                    <a class="carousel__img-link" href="images/carousel/carousel-big/python-big.jpg">
+                    <img class="carousel__img" src="images/carousel/python.jpg" alt="">
+                    </a>
+                </div>
+                <div class="carousel__item">
+                    <a class="carousel__img-link" href="images/carousel/carousel-big/saleforce-big.jpg">
+                    <img class="carousel__img" src="images/carousel/saleforce.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+            <h2 class="footer__title title">Anna Shylkina</h2>
+            <div class="footer__social social">
+                <a class="social__link" href="https://t.me/anya_shy" target="_blank">
+                    <img class="social__img" src="images/icon/telegram.svg" alt="telegram">
+                </a>
+                <a class="social__link" href="tel:+380992293367">
+                    <img class="social__img" src="images/icon/phone.svg" alt="phone">
+                </a>
+                <a class="social__link" href="mailto:shylkina.ao@gmail.com">
+                    <img class="social__img" src="images/icon/email.svg" alt="gmail">
+                </a>
+                <a class="social__link" href="https://github.com/Anna-Shy" target="_blank">
+                    <img class="social__img" src="images/icon/github.svg" alt="github">
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
