Add section contant me and new font

--- a/cv.html
+++ b/cv.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Praise&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -63,10 +65,14 @@
             <div class="about__inner">
                 <div class="about__desc">
                     <p class="about__text">
-                        Young and ambition girl, who on the finish line of the second University. <br>I interests by
-                        fresh
-                        technologies and constantly striving for new knowledges. During the study worked with front-end
-                        and back-end sides. And don't afraid challenging tasks.
+                        Hi, my name is Anna.<br> I'm a young and ambition girl, who on the finish line of the second
+                        University. I interests by fresh technologies and constantly striving for new knowledges.
+                        During the study worked with
+                        front-end
+                        and back-end sides. And don't afraid challenging tasks.<br>
+                        My interests are robotics, astronomy, design.<br>
+                        As for entertainment, it's traveling, music and reading.
+
                     </p>
                 </div>
 
@@ -153,60 +159,72 @@
             <div class="carousel__inner">
                 <div class="carousel__item">
                     <a class="carousel__img-link" href="images/carousel/carousel-big/codeacad-inter-js-big.jpg">
-                    <img class="carousel__img" src="images/carousel/codeacad-inter-js.jpg" alt="">
-                </a>
+                        <img class="carousel__img" src="images/carousel/codeacad-inter-js.jpg" alt="">
+                    </a>
                 </div>
                 <div class="carousel__item">
                     <a class="carousel__img-link" href="images/carousel/carousel-big/codeacadem-js-big.jpg">
-                    <img class="carousel__img" src="images/carousel/codeacadem-js.jpg" alt="">
+                        <img class="carousel__img" src="images/carousel/codeacadem-js.jpg" alt="">
                     </a>
                 </div>
                 <div class="carousel__item">
                     <a class="carousel__img-link" href="images/carousel/carousel-big/js_testprovider-big.jpg">
-                    <img class="carousel__img" src="images/carousel/js_testprovider.jpg" alt="">
+                        <img class="carousel__img" src="images/carousel/js_testprovider.jpg" alt="">
                     </a>
                 </div>
                 <div class="carousel__item">
                     <a class="carousel__img-link" href="images/carousel/carousel-big/js_testprovider-2-big.jpg">
-                    <img class="carousel__img" src="images/carousel/js_testprovider-2.jpg" alt="">
+                        <img class="carousel__img" src="images/carousel/js_testprovider-2.jpg" alt="">
                     </a>
                 </div>
                 <div class="carousel__item">
                     <a class="carousel__img-link" href="images/carousel/carousel-big/python-big.jpg">
-                    <img class="carousel__img" src="images/carousel/python.jpg" alt="">
+                        <img class="carousel__img" src="images/carousel/python.jpg" alt="">
                     </a>
                 </div>
                 <div class="carousel__item">
                     <a class="carousel__img-link" href="images/carousel/carousel-big/saleforce-big.jpg">
-                    <img class="carousel__img" src="images/carousel/saleforce.jpg" alt="">
+                        <img class="carousel__img" src="images/carousel/saleforce.jpg" alt="">
                     </a>
                 </div>
             </div>
         </div>
     </section>
 
-    
-<footer class="footer">
-    <div class="container">
-        <div class="footer__inner">
-            <h2 class="footer__title title">Anna Shylkina</h2>
-            <div class="footer__social social">
-                <a class="social__link" href="https://t.me/anya_shy" target="_blank">
-                    <img class="social__img" src="images/icon/telegram.svg" alt="telegram">
-                </a>
-                <a class="social__link" href="tel:+380992293367">
-                    <img class="social__img" src="images/icon/phone.svg" alt="phone">
-                </a>
-                <a class="social__link" href="mailto:shylkina.ao@gmail.com">
-                    <img class="social__img" src="images/icon/email.svg" alt="gmail">
-                </a>
-                <a class="social__link" href="https://github.com/Anna-Shy" target="_blank">
-                    <img class="social__img" src="images/icon/github.svg" alt="github">
-                </a>
+    <section class="contact">
+            <div class="container">
+              <h2 class="contact__title title">Contact me</h2>
+              <form class="contact__form">
+                <input class="contact__input" type="text" placeholder="Your name">
+                <input class="contact__input" type="tel" placeholder="You phone number">
+                <input class="contact__input" type="email" placeholder="E-mail">
+                <textarea class="contact__area" placeholder="Comment"></textarea>
+                <button class="contact__btn" type="submit">Send</button>
+              </form>
+            </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <h2 class="footer__title title">Anna Shylkina</h2>
+                <div class="footer__social social">
+                    <a class="social__link" href="https://t.me/anya_shy" target="_blank">
+                        <img class="social__img" src="images/icon/telegram.svg" alt="telegram">
+                    </a>
+                    <a class="social__link" href="tel:+380992293367">
+                        <img class="social__img" src="images/icon/phone.svg" alt="phone">
+                    </a>
+                    <a class="social__link" href="mailto:shylkina.ao@gmail.com">
+                        <img class="social__img" src="images/icon/email.svg" alt="gmail">
+                    </a>
+                    <a class="social__link" href="https://github.com/Anna-Shy" target="_blank">
+                        <img class="social__img" src="images/icon/github.svg" alt="github">
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
