--- a/cv.html
+++ b/cv.html
@@ -40,7 +40,7 @@
                     </nav>
                 </div>
 
-                <h1 class="header__title">Anna Shylkina</h1>
+                <h1 class="header__title">Anna Shylkina!</h1>
                 <img class="header__images-myphoto" src="images/my-photo.jpg" alt="">
 
                 <div class="header__social social">
